add user migration

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^4.8.1"
+    "webpack": "^3.11.0"
   },
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "description": "A social netbork for dogs",
   "version": "1.0.0",
   "main": "webpack.config.js",
   "directories": {
