--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: disgracebook_development
+  database: facebork_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: disgracebook_test
+  database: facebork_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: disgracebook_production
-  username: disgracebook
-  password: <%= ENV['DISGRACEBOOK_DATABASE_PASSWORD'] %>
+  database: facebork_production
+  username: facebork
+  password: <%= ENV['FACEBORK_DATABASE_PASSWORD'] %>
