--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "weback --watch"
+    "start": "webpack --watch"
   },
   "repository": {
     "type": "git",
