--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^3.11.0"
+    "webpack": "^4.8.1"
   },
   "description": "A social netbork for dogs",
   "version": "1.0.0",
@@ -23,10 +23,12 @@
   "directories": {
     "test": "test"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^2.1.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch"
+    "start": "webpack --mode=development --watch"
   },
   "repository": {
     "type": "git",
