--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "redux-thunk": "^2.2.0",
     "webpack": "^4.8.1"
   },
+  "engines": {
+    "node": "6.10.1",
+    "npm": "3.10.10"
+  },
   "description": "A social netbork for dogs",
   "version": "1.0.0",
   "main": "webpack.config.js",
@@ -28,7 +32,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --mode=development --watch"
+    "start": "webpack --mode=development --watch",
+    "postinstall": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
