--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: profiles
+#
+#  id                  :bigint(8)        not null, primary key
+#  user_id             :integer          not null
+#  birthday            :string
+#  job_title           :string
+#  lives_in            :string
+#  relationship_status :string
+#  owners_names        :string
+#  breed               :string
+#  fav_toy             :string
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
