--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,14 +2,17 @@
 #
 # Table name: users
 #
-#  id              :bigint(8)        not null, primary key
-#  name            :string           not null
-#  email           :string           not null
-#  password_digest :string           not null
-#  session_token   :string           not null
-#  avi_url         :string
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
+#  id               :bigint(8)        not null, primary key
+#  name             :string           not null
+#  email            :string           not null
+#  password_digest  :string           not null
+#  session_token    :string           not null
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#  avi_file_name    :string
+#  avi_content_type :string
+#  avi_file_size    :integer
+#  avi_updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
