--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -13,6 +13,7 @@
 #  fav_toy             :string
 #  created_at          :datetime         not null
 #  updated_at          :datetime         not null
+#  description         :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
