--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: comments
+#
+#  id           :bigint(8)        not null, primary key
+#  post_id      :integer          not null
+#  author_id    :integer          not null
+#  comment_text :text             not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
