--- a/test/fixtures/friends.yml
+++ b/test/fixtures/friends.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: friends
+#
+#  id         :bigint(8)        not null, primary key
+#  friender   :integer          not null
+#  friendee   :integer          not null
+#  status     :string           not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined. If you add columns to the
